--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -49,7 +49,7 @@
     <div class="card-info">
       <div class="card-top">
         <h3>{{ pokemon.name }}</h3>
-        <div>
+        <div class="pokemon-id">
           #{{ pokemon.id }}
         </div>
       </div>
