--- a/src/styles.css
+++ b/src/styles.css
@@ -6,11 +6,12 @@
 *{
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
 }
 
 body{
-  font-family: 'Open Sans', sans-serif;;
+  font-family: 'Open Sans', sans-serif;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .type-normal {
